 iface.py                  Locally Modified          132 


General work on vico compatibility.  Unfortunately, although vico is
quite close, some of the software (a static function relating to
determining whether a thread is the vico main thread seems to be
undefined) is still not compiling.  However, things do seem close.
Generally, the code was using non-awb style commits, and this caused
some obvious issues, particularly with regard to the awb/asim switch
in the include path.

I'm hoping for someone to examine the software issue, but for now, I
will try to hack around it and see how far I get.



----------
kfleming    Date: Wed Aug  3 00:13:52 EDT 2011  CSN: CSN-leap-134
                  Wed Aug  3 04:13:52 UTC 2011


Directory config/pm/hasim/submodels/fpgaenv
 fpgaenv-hybrid-605-serial-xst.apm Locally Added               0 
 fpgaenv-hybrid-605d-xst.apm Locally Modified          133 

Directory config/pm/leap/demos/hello
 hello_hybrid_ml605.apm    Locally Modified          133 

Directory modules/leap/build-support/build-pipelines/stages/xilinx
 xilinx-map.awb            Locally Modified          133 
 XILINX_MAP.py             Locally Modified          133 


Moved -cm balanced flag to MAPPER options parameter.  mL605 doesn't like this flag...

----------
mcadler     Date: Wed Aug  3 20:50:36 EDT 2011  CSN: CSN-leap-135
                  Thu Aug  4 00:50:36 UTC 2011


Directory modules/leap/virtual-platform/virtual-devices/devices/central-cache
 central-cache-backing-store.bsv Locally Modified          134 

Fix deadlock observed in the in-order cache model under high load.  Multiple
central cache clients may read from their backing storage in an order different
than the order requested by the central cache.  While legal in the protocol,
RRR doesn't provide enough buffering to avoid a deadlock when the central
cache sorts the responses.

Added a credit scheme and buffering internal to the central cache backing
storage interface.